# timewarp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Changelog.md  README.md  vcpkg.json
.github/workflows/: build.ps1  main-0.1.0.yml  prepare.ps1
.vcpkg/triplets/: x64-windows-static.cmake  x86-windows-static.cmake
misc/: timewarp.def  timewarp.toml  version.rc.in
src/: hooks.cpp  main.cpp
